tests/bad/test_lat_grid_interval.marc
MAP:    test_bad_map.fits
        BODY:   Jupiter
                EQ_RAD:         71492
                POL_RAD:        66854
                ROTATION:       PROGRADE
        DATA_TYPE:      BYTE
	GRID:           YES
	                LAT_GRID_INTERVAL: -10
        TYPE:           SIMPLE_C
        OPTIONS:
                CENTRIC
        SAMPLES:        50
        LINES:          25

        PLANE:
                LONGITUDE
